--- a/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
@@ -1,87 +1,200 @@
 <div class="FullWidth">
-    <div class="AboutUs-imageContainer">
-        <div class="AboutUs-image" role="img" [attr.aria-label]="'AboutUsPage.ImageAlt' | translate">
-            <div class="PageHeader-box PageHeader-box--header Hidden-mobile">
-                <div class="PageHeader-boxContent" translate>AboutUsPage.InfoBox</div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="PageHeader-box PageHeader-box--header Hidden-desktop">
-    <div class="PageHeader-boxContent" translate>AboutUsPage.InfoBox</div>
+  <div class="AboutUs-imageContainer">
+    <div
+      class="AboutUs-image"
+      role="img"
+      [attr.aria-label]="'AboutUsPage.ImageAlt' | translate"
+    ></div>
+  </div>
 </div>
 
-<div class="PageHeader-background Background--blue">
-    <div class="PageLayout">
-        <div class="PageHeader-box PageHeader-box--footer"></div>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 class="PageHeader-title--aboutUs" translate>AboutUsPage.Title</h1>
-            </div>
-        </div>
+<div class="PageHeader-background Background--blue alt">
+  <div class="PageLayout">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h1 class="PageHeader-title">{{ 'AboutUsPage.Title' | translate }}</h1>
+      </div>
     </div>
+  </div>
 </div>
 
 <div class="Wrapper row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-        <p class="Paragraph TopMargin75" translate>AboutUsPage.Intro.Text1</p>
-        <p class="Paragraph" translate>AboutUsPage.Intro.Text2</p>
-        <hr class="HorizontalLine">
+  <div
+    class="col-lg-9 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Container"
+  >
+    <!-- Intro -->
+    <p class="Paragraph TopMargin75">
+      {{ 'AboutUsPage.Intro.Paragraph' | translate }}
+    </p>
 
-        <img lazy-resource src="/assets/images/about-page-broad-building.png" class="PageContent-image"
-            [alt]="'AboutUsPage.Intro.ImageAlt' | translate">
-        <h2 class="Title Color--blue Aligned--center TopMargin75" translate>AboutUsPage.Broad.Title</h2>
-        <p class="Paragraph TopMargin50" translate>AboutUsPage.Broad.Section1</p>
-        <p class="Paragraph">Despite these exciting improvements in diagnosis, however, the vast majority of rare
-            disease patients still remain undiagnosed.
-            <span translate>AboutUsPage.Broad.Section2.Text1</span>
-            <span class="Accent" translate>AboutUsPage.Broad.Section2.Text2</span>,
-            <span translate>AboutUsPage.Broad.Section2.Text3</span>
-            <a href="https://broadinstitute.org" target="_blank" class="Link">broadinstitute.org</a>.</p>
-        <hr class="HorizontalLine">
+    <hr class="HorizontalLine" />
+
+    <!-- Our story -->
+    <h2 class="Title Color--blue Aligned--center TopMargin75">
+      {{ 'AboutUsPage.OurStory.Title' | translate }}
+    </h2>
+
+    <p class="Paragraph TopMargin50">
+      {{ 'AboutUsPage.OurStory.Paragraph1' | translate }}
+    </p>
+
+    <p class="Paragraph">
+      {{ 'AboutUsPage.OurStory.Paragraph2' | translate }}
+    </p>
+
+    <hr class="HorizontalLine" />
+
+    <!-- Broad Institute -->
+    <h2 class="Title Color--blue Aligned--center TopMargin75">
+      {{ 'AboutUsPage.BroadInstitute.Title' | translate }}
+    </h2>
+
+    <p class="Paragraph TopMargin50">
+      {{ 'AboutUsPage.BroadInstitute.Paragraph' | translate }}
+    </p>
+
+    <hr class="HorizontalLine" />
+
+    <!-- Our Team -->
+
+    <h2 class="Title Color--blue Aligned--center TopMargin75">
+      {{ 'AboutUsPage.OurTeam.Title' | translate }}
+    </h2>
+
+    <!-- Leadership -->
+
+    <h3 class="Subtitle Aligned--center">
+      {{ 'AboutUsPage.OurTeam.Leadership.Title' | translate }}
+    </h3>
+
+    <div class="row">
+      <div
+        *ngFor="
+          let member of 'AboutUsPage.OurTeam.Leadership.Members' | translate
+        "
+        class="col-lg-4 col-md-4 col-sm-4 col-xs-12"
+      >
+        <ng-container
+          *ngTemplateOutlet="memberTemplate; context: { member: member }"
+        ></ng-container>
+      </div>
     </div>
 
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h2 class="Title Color--blue Aligned--center" translate>AboutUsPage.Team.Title</h2>
-        <div class="row" style="margin: 25px 0 0 0">
-            <ng-container *ngFor="let teammate of 'AboutUsPage.Team.Section1' | translate">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="TeamMember" (click)="openDialog(teammate)">
-                        <h4 class="Subtitle TeamMember-name">{{teammate.name}}</h4>
-                        <p class="TeamMember-role">{{teammate.role}}</p>
-                    </div>
-                </div>
-            </ng-container>
+    <hr />
+
+    <!-- Project Management -->
+
+    <h3 class="Subtitle Aligned--center">
+      {{ 'AboutUsPage.OurTeam.ProjectManagement.Title' | translate }}
+    </h3>
+
+    <div class="row">
+      <ng-container
+        *ngFor="
+          let member of 'AboutUsPage.OurTeam.ProjectManagement.Members'
+            | translate;
+          let first = first
+        "
+      >
+        <div
+          class="col-lg-3 col-md-3 col-sm-6 col-xs-12"
+          [class.col-lg-offset-3]="first"
+          [class.col-md-offset-3]="first"
+        >
+          <ng-container
+            *ngTemplateOutlet="memberTemplate; context: { member: member }"
+          ></ng-container>
         </div>
-        <div class="row NoMargin">
-            <ng-container *ngFor="let teammate of 'AboutUsPage.Team.Section2' | translate">
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    <div class="TeamMember" (click)="openDialog(teammate)">
-                        <h4 class="Subtitle TeamMember-name">{{teammate.name}}</h4>
-                        <p class="TeamMember-role">{{teammate.role}}</p>
-                    </div>
-                </div>
-            </ng-container>
-            <ng-container *ngFor="let teammate of 'AboutUsPage.Team.Section3' | translate">
-                <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-xs-12">
-                    <div class="TeamMember" (click)="openDialog(teammate)">
-                        <h4 class="Subtitle TeamMember-name">{{teammate.name}}</h4>
-                        <p class="TeamMember-role">{{teammate.role}}</p>
-                    </div>
-                </div>
-            </ng-container>
-        </div>
+      </ng-container>
     </div>
 
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 Container">
-        <hr class="HorizontalLine">
-        <p class="Paragraph Accent Aligned--center" translate>AboutUsPage.ThanksBroad</p>
-        <hr class="HorizontalLine">
+    <hr />
 
-        <p class="Paragraph Aligned--center">
-            <span translate>AboutUsPage.ThanksPhotographer.Text1</span>
-            <a href="http://awareofangels.org" target="_blank" class="Link">Aware of Angels</a>.
-            <span translate>AboutUsPage.ThanksPhotographer.Text2</span>
-        </p>
+    <!-- Others -->
+
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <ng-container
+          *ngFor="
+            let category of 'AboutUsPage.OurTeam.LeftColumn' | translate;
+            let first = first
+          "
+        >
+          <h3 class="Subtitle Aligned--center" [class.mt-40]="!first">
+            {{ category.Title }}
+          </h3>
+
+          <ng-container *ngFor="let member of category.Members">
+            <ng-container
+              *ngTemplateOutlet="memberTemplate; context: { member: member }"
+            ></ng-container>
+          </ng-container>
+        </ng-container>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <ng-container
+          *ngFor="
+            let category of 'AboutUsPage.OurTeam.CenterColumn' | translate;
+            let first = first
+          "
+        >
+          <h3 class="Subtitle Aligned--center" [class.mt-40]="!first">
+            {{ category.Title }}
+          </h3>
+
+          <ng-container *ngFor="let member of category.Members">
+            <ng-container
+              *ngTemplateOutlet="memberTemplate; context: { member: member }"
+            ></ng-container>
+          </ng-container>
+        </ng-container>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <ng-container
+          *ngFor="
+            let category of 'AboutUsPage.OurTeam.RightColumn' | translate;
+            let first = first
+          "
+        >
+          <h3 class="Subtitle Aligned--center" [class.mt-40]="!first">
+            {{ category.Title }}
+          </h3>
+
+          <ng-container *ngFor="let member of category.Members">
+            <ng-container
+              *ngTemplateOutlet="memberTemplate; context: { member: member }"
+            ></ng-container>
+          </ng-container>
+        </ng-container>
+      </div>
     </div>
+
+    <hr class="HorizontalLine" />
+
+    <p
+      class="Paragraph Accent Aligned--center"
+      [innerHTML]="'AboutUsPage.ThankYou' | translate"
+    ></p>
+
+    <hr class="HorizontalLine" />
+
+    <p
+      class="Paragraph Aligned--center"
+      [innerHTML]="'AboutUsPage.Outro' | translate"
+    ></p>
+  </div>
 </div>
+
+<ng-template #memberTemplate let-member="member">
+  <div class="TeamMember">
+    <h4
+      class="Subtitle TeamMember-name"
+      role="button"
+      (click)="openDialog(member)"
+    >
+      {{ member.name }}
+    </h4>
+  </div>
+</ng-template>
