--- a/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/dialog/about-us-dialog.component.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/dialog/about-us-dialog.component.scss
@@ -18,14 +18,6 @@
     color: #747474;
 }
 
-.Dialog-headerClose {
-    color: #747474;
-    z-index: 10000;
-    font-size: 1.5rem;
-    cursor: pointer;
-    float: right;
-}
-
 .Dialog-photo {
     width: 100%;
     height: auto;
@@ -39,5 +31,22 @@
 
     .Dialog-container {
         padding: 30px;
+    }
+}
+
+.row {
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
+    z-index: 100;
+
+    @media (max-width: 450px) {
+        top: -20px;
+        right: -20px;
     }
 }
