RGP: Add links to member's bio

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/dialog/about-us-dialog.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/dialog/about-us-dialog.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <mat-dialog-content>
-      <p class="Paragraph">{{ data.bio }}</p>
+      <p class="Paragraph" [innerHTML]="data.bio"></p>
     </mat-dialog-content>
   </div>
 </div>
