Refactor  activity-redesigned component and implement a new vertical progress indicator

--- a/ddp-workspace/projects/ddp-osteo/src/styles.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles.scss
@@ -9,6 +9,7 @@
 @import './styles/session-expired.scss';
 @import './styles/dialogs.scss';
 @import './styles/static-page.scss';
+@import './styles/variables.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Source Sans Pro');
 
@@ -118,15 +119,15 @@ h4 {
 }
 
 .content_wide {
-    max-width: 1200px;
+    max-width: $content-wide-width;
 }
 
 .content_medium {
-    max-width: 1000px;
+    max-width: $content-medium-width;
 }
 
 .content_tight {
-    max-width: 700px;
+    max-width: $content-tight-width;
 }
 
 .bold {
