--- a/ddp-workspace/projects/ddp-rgp/src/app/components/email-verification-required/email-verification-required.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/email-verification-required/email-verification-required.component.html
@@ -4,17 +4,19 @@
       <div
         class="col-lg-9 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12"
       >
-        <h1 class="PageHeader-title">Email not verified</h1>
+        <h1 class="PageHeader-title">
+          {{ 'EmailVerificationRequiredPage.Header' | translate }}
+        </h1>
       </div>
     </div>
   </div>
 </div>
 <div class="Wrapper row">
-  <div class="row Margin--75">
-    <div
-      class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12"
-    >
-      <p class="Paragraph">Please verfy your email</p>
-    </div>
+  <div
+    class="col-lg-9 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Container"
+  >
+    <p class="Paragraph">
+      {{ 'EmailVerificationRequiredPage.Text' | translate }}
+    </p>
   </div>
 </div>
