DDP-5691: Redirect users to sign in page upon logging out

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
@@ -7,7 +7,9 @@
         </a>
       </li>
       <li class="nav-list__item">
-        <ddp-sign-in-out [signOutReturnToUrl]="rarexLink"></ddp-sign-in-out>
+        <ddp-sign-in-out
+          [signOutReturnToUrl]="routes.LoginRedirect"
+        ></ddp-sign-in-out>
       </li>
     </ul>
   </nav>
