--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/question-prompt/questionPrompt.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/question-prompt/questionPrompt.component.scss
@@ -1,6 +1,6 @@
 .ddp-question-prompt {
   &__info-header {
-    display: inline-block;
+    display: block;
     font-size: var(--question-prompt-additional-header-font-size, 14px);
     color: var(--question-prompt-additional-header-color, #343434);
     line-height: var(--question-prompt-additional-header-line-height, 20px);
