--- a/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
@@ -337,9 +337,7 @@ select:disabled {
 
 // composite question
 ddp-activity-composite-answer {
-
-    p,
-    span {
+    p, span {
         font-weight: 400;
     }
 
@@ -368,6 +366,29 @@ ddp-activity-composite-answer {
 .ddp-composite-text {
     flex-grow: 1;
     margin-right: 1.5rem;
+}
+
+.composite-answer-LOVEDONE_METASTATIC_DISEASE_DATE {
+    .ddp-answer-container {
+        align-items: inherit;
+    }
+}
+
+.ddp-answer-container {
+    align-items: baseline;
+
+    .ddp-answer-field {
+        margin-right: 1.5rem;
+        flex-grow: 1;
+
+        .mat-form-field {
+            line-height: 21px;
+        }
+    }
+
+    .ddp-answer-field:last-child {
+        margin-right: 0;
+    }
 }
 
 @media screen and (max-width: 560px) {
