Rare-X: Privacy policy page minor fixes

--- a/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -442,7 +442,7 @@
   <ul class="list">
     <li
       *ngFor="
-        let item of 'Pages.PrivacyPolicy.InformationProtection.Paragraph1'
+        let item of 'Pages.PrivacyPolicy.InformationProtection.List'
           | translate
       "
     >
