--- a/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.scss
@@ -1,8 +1,15 @@
 .container {
+  padding: 1.2rem 2.4rem;
+
   max-width: 1024px;
+
+  @media (max-width: 600px) {
+    padding: 0.8rem 1.6rem;
+  }
 }
 
 .title {
+  margin-top: 10px;
   margin-bottom: 8px;
 
   font-size: 24px;
