Add images alt translation

--- a/ddp-workspace/projects/toolkit/src/lib/components/thank-you/thank-you-family-history/thank-you-family-history.component.html
+++ b/ddp-workspace/projects/toolkit/src/lib/components/thank-you/thank-you-family-history/thank-you-family-history.component.html
@@ -1,7 +1,7 @@
 <main class="family-history-thank-you-container">
     <section class="content">
-        <img src="assets/images/FHS-Tree1.png" class="image-first" alt="First image">
-        <img src="assets/images/FHS-Tree2.png" class="image-second" alt="Second image"/>
+        <img src="assets/images/FHS-Tree1.png" class="image-first" [alt]="'ThankYouFamilyHistory.FirstImage' | translate">
+        <img src="assets/images/FHS-Tree2.png" class="image-second" [alt]="'ThankYouFamilyHistory.SecondImage' | translate"/>
 
         <div class="title" translate>ThankYouFamilyHistory.Title</div>
         <div class="subtitle" translate>ThankYouFamilyHistory.Subtitle</div>
