RGP: Dashboard rework

--- a/ddp-workspace/projects/ddp-rgp/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_buttons.scss
@@ -27,11 +27,18 @@
 
   &:not(:disabled):active {
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-      0 8px 10px 1px rgba(241, 230, 230, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      0 8px 10px 1px rgba(241, 230, 230, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
 
   &--primary {
     background-color: $color-blue-dark;
+
+    color: #ffffff;
+  }
+
+  &--secondary {
+    background-color: $color-orange;
 
     color: #ffffff;
   }
