--- a/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_variables.scss
@@ -7,3 +7,4 @@ $color-orange-light: #f9dbca;
 $color-grey-light: #f1f1f1;
 $color-grey-light-2: #efefef;
 $color-grey-light-3: #eeeeee;
+$color-green: #41b441;
