DDP-5673 Implement "Thank You" page for Family History (#480)
Implement Thank you page for Family History

--- a/ddp-workspace/projects/ddp-osteo/src/styles.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles.scss
@@ -9,6 +9,7 @@
 @import './styles/session-expired.scss';
 @import './styles/dialogs.scss';
 @import './styles/static-page.scss';
+@import './styles/family-history-thank-you.scss';
 @import './styles/variables.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Source Sans Pro');
