--- a/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/user-dashboard/user-dashboard.component.html
@@ -13,10 +13,16 @@
   <div
     class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Dashboard-container Container"
   >
-    <app-study-messages></app-study-messages>
-
-    <div class="TopMargin50">
-      <app-user-activities></app-user-activities>
+    <div *ngIf="loading; else content" class="spinner-container">
+      <mat-spinner></mat-spinner>
     </div>
   </div>
 </div>
+
+<ng-template #content>
+  <app-study-messages [messages]="messages"></app-study-messages>
+
+  <div class="TopMargin50">
+    <app-user-activities [activities]="activities"></app-user-activities>
+  </div>
+</ng-template>
